made more figures for rough draft of motion distortion paper

--- a/v3/point_cloud_rectification/linear_correction.ipynb
+++ b/v3/point_cloud_rectification/linear_correction.ipynb
@@ -2,54 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 95,
    "id": "89042def",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-05-03 14:00:45.626795: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-05-03 14:00:45.712151: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2023-05-03 14:00:46.033982: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
-      "2023-05-03 14:00:46.034035: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
-      "2023-05-03 14:00:46.034040: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
-      "2023-05-03 14:00:46.463712: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-05-03 14:00:46.488581: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-05-03 14:00:46.488731: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-05-03 14:00:46.695041: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-05-03 14:00:46.695808: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-05-03 14:00:46.696042: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-05-03 14:00:46.696185: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-05-03 14:00:47.023390: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-05-03 14:00:47.023557: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-05-03 14:00:47.023679: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-05-03 14:00:47.023774: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4096 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:07:00.0, compute capability: 8.6\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     },
     {
@@ -134,22 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "id": "a120a44a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# load point cloud\n",
-    "# # no distortion\n",
+    "# no distortion\n",
     "# old_cloud =  np.load(\"sample_data/paper_figures/case1/raw_frame_0.npy\")\n",
-    "# # m_hat = np.array([0., 0., 0., 0., 0., 0.0]) #actual motion\n",
+    "m_hat = np.array([0., 0., 0., 0., 0., 0.0]) #actual motion\n",
     "# m_hat = np.array([-3., 0., 0., 0., 0., 0.1]) #test wrap around\n",
     "\n",
-    "# movement in x\n",
-    "old_cloud =  np.load(\"sample_data/paper_figures/case2/raw_frame_3.npy\") \n",
-    "m_hat = np.array([3, 0, 0., 0., 0., 0])\n",
-    "# m_hat = np.array([3, 0, 0., 0., 0., -0.2]) #FOR DEBUG-- deform just a little\n",
-    "gt =  np.load(\"sample_data/paper_figures/case2/base_vel_2.npy\")\n",
+    "# # movement in x\n",
+    "# old_cloud =  np.load(\"sample_data/paper_figures/case2/raw_frame_3.npy\") \n",
+    "# m_hat = np.array([3, 0, 0., 0., 0., 0])\n",
+    "# # m_hat = np.array([3, 0, 0., 0., 0., -0.2]) #FOR DEBUG-- deform just a little\n",
+    "# gt =  np.load(\"sample_data/paper_figures/case2/base_vel_2.npy\")\n",
     "\n",
     "# # movement in x, y, & yaw\n",
     "# old_cloud =  np.load(\"sample_data/paper_figures/case3/raw_frame_1.npy\") \n",
@@ -172,44 +135,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 82,
    "id": "50cf50be",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from remove_motion_basic import linear_correction_old as lc \n",
     "\n",
     "new_cloud = lc(old_cloud, m_hat)\n",
-    "# undistorted = lc(new_cloud, -m_hat)"
+    "# undistorted = lc(new_cloud, -m_hat)\n",
+    "\n",
+    "#use actual data ~~~\n",
+    "old_cloud =  np.load(\"sample_data/paper_figures/case2/raw_frame_1.npy\")\n",
+    "new_cloud =  np.load(\"sample_data/paper_figures/case2/raw_frame_3.npy\") \n",
+    "# old_cloud = old_cloud[::5,:]\n",
+    "# new_cloud = new_cloud[::5,:]\n",
+    "#~~~~~~~~~~~~~~~~~~~"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 83,
    "id": "d9a01d62",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/vtkmodules/util/numpy_support.py:74: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  _vtk_np = {vtkConstants.VTK_BIT:numpy.bool,\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4764e2b6b6524f528125c74fc22936be",
+       "model_id": "d249bf93d27645cf82f663bd00d2e00b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -745,25 +698,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 94,
    "id": "d94129f1",
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/vtkmodules/util/numpy_support.py:74: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  _vtk_np = {vtkConstants.VTK_BIT:numpy.bool,\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e59d242009549018253035464afbd17",
+       "model_id": "82d0d5a6a2f94a20846e236c2a17a85f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -789,13 +733,16 @@
     "# y_i = y_i[y_i[:,2] > -1]\n",
     "# y_j = y_j[y_j[:,2] > -1]\n",
     "\n",
+    "#shift y_i in x\n",
+    "# y_i[:,0] -= 1.5\n",
+    "\n",
     "H = get_H(y_j = y_j, m_hat = m_hat )\n",
     "\n",
     "#plot result\n",
     "plt = Plotter(N = 1, axes = 4, bg = (1, 1, 1), interactive = True)\n",
     "disp=[]\n",
-    "disp.append(Points(y_i, c = \"#CB2314\", r=3.5))\n",
-    "disp.append(Points(y_j, c = \"#3F5151\", r=3.5))\n",
+    "disp.append(Points(y_i, c = \"#a65852\", r=3)) #CB2314\n",
+    "disp.append(Points(y_j, c = \"#2c7c94\", r=3))\n",
     "plt.show(disp, \"test viz\")\n",
     "ViewInteractiveWidget(plt.window)"
    ]
