wrestling with getting ground truth poses to move raw LIDAR data to hd map

--- a/v3/point_cloud_rectification/scan_to_HD_map.ipynb
+++ b/v3/point_cloud_rectification/scan_to_HD_map.ipynb
@@ -18,31 +18,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-29 09:59:28.613237: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2023-06-06 12:11:28.982640: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-05-29 09:59:28.792744: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
-      "2023-05-29 09:59:28.792767: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2023-05-29 09:59:29.637840: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
-      "2023-05-29 09:59:29.637975: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
-      "2023-05-29 09:59:29.637984: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+      "2023-06-06 12:11:29.078582: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-06-06 12:11:29.453802: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
+      "2023-06-06 12:11:29.453862: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
+      "2023-06-06 12:11:29.453868: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
+      "2023-06-06 12:11:29.884919: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-06-06 12:11:29.912774: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-06-06 12:11:29.913012: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-29 09:59:30.459730: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
-      "2023-05-29 09:59:30.459757: W tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:265] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2023-05-29 09:59:30.459784: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (derm-Latitude-3380): /proc/driver/nvidia/version does not exist\n",
-      "2023-05-29 09:59:30.908486: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "2023-06-06 12:11:30.025269: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-06-06 12:11:30.026023: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-06-06 12:11:30.026245: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-06-06 12:11:30.026392: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-06-06 12:11:30.340141: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-06-06 12:11:30.340315: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-06-06 12:11:30.340440: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-06-06 12:11:30.340532: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4096 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:07:00.0, compute capability: 8.6\n"
      ]
     },
     {
@@ -114,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "id": "0b4ab0ca",
    "metadata": {},
    "outputs": [],
@@ -122,31 +128,23 @@
     "#Load HD Map from .ply File\n",
     "import trimesh\n",
     "\n",
-    "pl = '/home/derm/Downloads/new-college-29-01-2020-1cm-resolution-1stSection - mesh.ply' #provided in Google Drive 03\n",
-    "HD_map = trimesh.load(pl).vertices"
+    "# pl = '/home/derm/Downloads/new-college-29-01-2020-1cm-resolution-1stSection - mesh.ply' #provided in Google Drive 03\n",
+    "pl = '/media/derm/06EF-127D3/Newer College Dataset/new-college-29-01-2020-1cm-resolution-1stSection - mesh.ply'\n",
+    "HD_map = trimesh.load(pl).vertices\n",
+    "# print(type(HD_map))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "3a983289",
+   "cell_type": "markdown",
+   "id": "00fb3793",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'trimesh.caching.TrackedArray'>\n"
-     ]
-    }
-   ],
    "source": [
-    "print(type(HD_map))"
+    "# Draw HD Map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "id": "5bd48cb9",
    "metadata": {},
    "outputs": [
@@ -159,50 +157,174 @@
     },
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a9008470db324e2dac01d05067a2b0c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "<vedo.plotter.Plotter at 0x7fb2e4479640>"
+       "ViewInteractiveWidget(height=1043, layout=Layout(height='auto', width='100%'), width=1280)"
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "#Test drawing downsampled version of HD Map (laptop alert)\n",
-    "show_nth = 10 #2\n",
+    "show_nth = 10 #10\n",
     "submap = HD_map[::show_nth]\n",
-    "submap[:,2] += min(submap[:,2])\n",
+    "# submap[:,2] += min(submap[:,2])\n",
     "print(np.shape(submap))\n",
     "\n",
-    "plt = Plotter(N = 1, axes = 4, bg = (1, 1, 1), interactive = True)\n",
+    "plt = Plotter(N = 1, axes = 1, bg = (1, 1, 1), interactive = True) #axes = 4\n",
     "disp=[]\n",
-    "## draw in red\n",
-    "# disp.append(Points(submap, c = \"#CB2314\", r = 1))  \n",
-    "#rainbow by z height\n",
-    "zheight = 100*(np.sin(0.0625*submap[:,2])+1) + 50\n",
-    "# cname = np.array([zheight, 100*(np.sin(0.5*zheight+256)+1), 128*np.ones(len(zheight))]).T.tolist()\n",
-    "# cname = np.array([zheight, zheight, zheight]).T.tolist()\n",
-    "cname = np.array([zheight, 64*np.ones(len(zheight)), 255 - zheight]).T.tolist()\n",
+    "# draw in red\n",
+    "disp.append(Points(submap, c = \"#CB2314\", r = 2, alpha = 0.1))  \n",
     "\n",
-    "disp.append(Points(submap, c = cname, r = 2, alpha = 0.1))\n",
+    "## rainbow by z height\n",
+    "# # zheight = 50*(np.sin(0.0625*submap[:,2])+1)#was this\n",
+    "# zheight = 100*(np.sin(0.25*submap[:,2])+1) #test\n",
+    "# print(zheight[::100], min(zheight), max(zheight))\n",
+    "# # cname = np.array([zheight, 100*(np.sin(0.5*zheight+256)+1), 128*np.ones(len(zheight))]).T.tolist()\n",
+    "# cname = np.array([zheight, zheight, zheight]).T.tolist()\n",
+    "# # cname = np.array([64*np.ones(len(zheight)), 256 - zheight/2, 256 - zheight]).T.tolist()\n",
+    "# disp.append(Points(submap, c = cname, r = 2, alpha = 0.1))\n",
     "\n",
     "plt.show(disp, \"HD Map\")\n",
-    "# ViewInteractiveWidget(plt.window)\n"
+    "ViewInteractiveWidget(plt.window)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77f3d357",
+   "metadata": {},
+   "source": [
+    "# Register scan using rigid ICET"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c7d0ebd",
+   "metadata": {},
+   "source": [
+    "### 05- Quad With Dynamics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "id": "71b2ccf3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = 600\n",
+    "fn1 = \"/media/derm/06EF-127D3/Newer College Dataset/05_Quad_With_Dynamics/point_clouds/frame_\" + str(idx) + \".npy\"\n",
+    "pc1 = np.load(fn1)\n",
+    "\n",
+    "#load ground truth\n",
+    "# [sec,nsec,x,y,z,qx,qy,qz,qw]\n",
+    "fn_gt = \"/media/derm/06EF-127D3/Newer College Dataset/05_Quad_With_Dynamics/registered_poses.csv\"\n",
+    "gt = np.loadtxt(fn_gt, delimiter=',',skiprows = 1)\n",
+    "# print(gt[idx, 2:])\n",
+    "\n",
+    "offset = 0#for debug \n",
+    "rot = R.from_quat(gt[idx+offset,5:]).as_euler('xyz')\n",
+    "rot_m = R.from_quat(gt[idx+offset,5:]).as_matrix()\n",
+    "# rot_m = R.from_quat(gt[idx,5:]).inv().as_matrix()\n",
+    "# rot_m = R.from_euler('xyz', [0, 0, rot[2]-np.pi/8]).as_matrix()\n",
+    "# print(rot_m)\n",
+    "\n",
+    "initial_guess = tf.cast(tf.constant([gt[idx+offset,2], gt[idx+offset,3], gt[idx+offset,4], rot[0], rot[1], rot[2] ]), tf.float32)\n",
+    "pc1 = pc1 @ rot_m\n",
+    "rotcorr = R.from_euler('xyz', [0,0,np.pi/8]).as_matrix() #need to correct 45 degree offset??\n",
+    "pc1 = pc1 @ rotcorr\n",
+    "pc1 += initial_guess[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "id": "540373fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "76de7d062a5147cd9f7a28ad94ea9384",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ViewInteractiveWidget(height=1043, layout=Layout(height='auto', width='100%'), width=1280)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#debug\n",
+    "plt = Plotter(N = 1, axes = 1, bg = (1, 1, 1), interactive = True) #axes = 4\n",
+    "disp=[]\n",
+    "# draw in red\n",
+    "disp.append(Points(submap, c = \"#CB2314\", r = 2, alpha = 0.1))  \n",
+    "disp.append(Points(pc1, c = 'blue',r = 2))\n",
+    "\n",
+    "#draw trajectory of platform according to <gt>\n",
+    "disp.append(Points(gt[:,2:5], r=3))#, alpha = 0.2))\n",
+    "disp.append(Points(gt[idx+offset,2:5][None,:], r=10, c = 'red'))\n",
+    "\n",
+    "\n",
+    "plt.show(disp, \"HD Map\")\n",
+    "ViewInteractiveWidget(plt.window)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "ebb7e2f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iter 0\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([23.644754    2.2081156  -6.5290947  -0.26306474 -0.3861428   1.6490262 ], shape=(6,), dtype=float32)\n",
+      "\n",
+      " predicted standard deviations of error: \n",
+      " tf.Tensor([0.07465528 0.02475301 0.2853202  0.03168241 0.05402187 0.00538026], shape=(6,), dtype=float32)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "51814a20683f4b15a14893330b680c7b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ViewInteractiveWidget(height=1043, layout=Layout(height='auto', width='100%'), width=1280)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "it = ICET(cloud1 = pc1, cloud2 = submap, fid = 50, niter = 1, \n",
+    "           draw = True, group = 2, RM = False, DNN_filter = False, x0 = initial_guess)\n",
+    "print(\"\\n predicted standard deviations of error: \\n\", it.pred_stds)\n",
+    "ViewInteractiveWidget(it.plt.window)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "898bf185",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22eda055",
+   "id": "31bff7bc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -224,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
